# AgentQuery

./: .gitignore  README.md  pyproject.toml
AgentQuery/: main.py  threads_main.py  types.py
AgentQuery/agents/: agent_config.py  instruments.py
AgentQuery/modules/: db.py  embedding.py  file.py  orchestrator.py  rand.py
database_ai_agent/modules/: db.py
